--- a/src/Components/Pages/Blog/Blog.css
+++ b/src/Components/Pages/Blog/Blog.css
@@ -2,6 +2,7 @@
 #blog {
     width: 100%;
     box-sizing: border-box;
+    martgin-top:5%;
 }
 .blog {
     width: 100%;
@@ -48,6 +49,7 @@
     height: 1px;
     background-color: red;
     border:1px solid red;
+    fill: var(--color, red);
 }
 .blog-two-sub-1 h4{
    color : #95a0ab;
@@ -96,10 +98,12 @@
 .blog-two-sub-1 h4:hover {
     color:red;
     cursor: pointer;
+    fill: var(--color, red);
 }
 .blog-two-sub-1 a {
     text-decoration: none;
     color:red;
+    fill: var(--color, red);
    
 }
 .blog-two-sub-1 a:hover {
@@ -125,11 +129,13 @@
 }
 .blog-two-sub-2 h4:hover {
     color:red;
+    fill: var(--color, red);
     cursor: pointer;
 }
 .blog-two-sub-2 a {
     text-decoration: none;
     color:red;
+    fill: var(--color, red);
 }
 .blog-two-sub-2 a:hover {
     color:black;
@@ -156,10 +162,12 @@
 .blog-two-sub-3 h4:hover {
     color:red;
     cursor: pointer;
+    fill: var(--color, red);
 }
 .blog-two-sub-3 a {
     text-decoration: none;
     color:red;
+    fill: var(--color, red);
 }
 .blog-two-sub-3 a:hover {
     color:black;
