--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -1,13 +1,13 @@
 #home {
     width: 100%;
     height:672px;
-     
     background-image: url("../Images/bg-home.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     margin-bottom: 50px;
     position: relative;
+   
 }
 .home-sub {
     background: linear-gradient(to right, #512da8, #711e72);
@@ -55,6 +55,7 @@
 }
 .home-content-1 a {
     background-color: red;
+    fill: var(--color, red);
     padding: 12px 16px;
     color: white;
     border-radius: 5px;
@@ -87,6 +88,14 @@
     height: 280px;
     
 }
+
+.wave {
+    width: 100%; height: 50px;
+    position: absolute; bottom: -10px;
+    
+}
+
+
 /* reponsive */
 
 @media screen and (min-width:320px) and (max-width:1023px) {
@@ -106,11 +115,12 @@
     .home-content-2-sub img { 
         height: auto;
     }
+    .wave img {height: 22px;}
 }
 
 @media screen and (min-width:1024px) and (max-width:1900px) {
    
     #home h1{font-size: 40px;}
     .home-sub-one {width: 90%;}
-    
+    .wave img {height: 35px;}
 }
