--- a/src/Components/Pages/Navbar/Nav.css
+++ b/src/Components/Pages/Navbar/Nav.css
@@ -23,7 +23,7 @@
     
 }
 .header-sub {
-    width: 60%;
+    width: 70%;
     height:80px;
     display: flex;
     flex-direction: row;
@@ -38,7 +38,7 @@
     align-items: center;
     letter-spacing: 2px;
     color:white;
-    margin-right: 50px;
+    margin-right: 100px;
     cursor: pointer;
     
 }
@@ -54,7 +54,7 @@
 }
 .header-menu li {
     display: inline;
-    padding-right:20px;
+    padding-right:50px;
     list-style-type: none;
     
 }
@@ -63,13 +63,16 @@
     font-size: 15px;
     text-decoration: none;
     transition: all 0.5s;
+    scroll-behavior: smooth;
 }
 .header-menu li:hover a {
     color:white;
+    scroll-behavior: smooth;
 }
 .btn {
     padding:14px 20px;
     background-color: red;
+    fill: var(--color, red);
     color:white;
     border-radius: 30px;
     border: none;
@@ -86,6 +89,7 @@
  .menugach {
      display: none;
      color: red;
+     fill: var(--color, red);
      font-size: 30px;
      width:50px ; height: 50px;
      position: absolute;
@@ -106,10 +110,12 @@
 .header-menu-gach a {
     text-decoration: none;
     color: white;
+    scroll-behavior: smooth;
 }
 .header-menu-gach .btn-gach {
     padding:14px 20px;
     background-color: red;
+    fill: var(--color, red);
     color:white;
     border-radius: 30px;
     border: none;
