--- a/src/Components/Pages/Team1/Team.css
+++ b/src/Components/Pages/Team1/Team.css
@@ -1,7 +1,7 @@
 
 #team {
     width: 100%; 
-    
+    margin-top:5%;
 
 }
 .team {
@@ -33,6 +33,7 @@
     width: 5%;
     height: 2px;
     background-color: red;
+    fill: var(--color, red);
 }
 .team-one-content p {
     color: #95a0ab ;
