--- a/src/Components/Pages/Wave/Wave.css
+++ b/src/Components/Pages/Wave/Wave.css
@@ -1,6 +1,6 @@
 .team2-five {
     width: 100%; height:441px;
-     
+    margin-top: 5%;
     background: url('../Images/img2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
