--- a/src/Components/SetColor/Setcolor.css
+++ b/src/Components/SetColor/Setcolor.css
@@ -61,3 +61,8 @@
     display: flex;
     flex-wrap: wrap;
   }
+
+  @media screen and (min-width:320px) and (max-width:1023px) {
+
+    #setting {display:none;}
+  }
