--- a/src/Components/Pages/Navbar/Nav.css
+++ b/src/Components/Pages/Navbar/Nav.css
@@ -10,6 +10,9 @@
     z-index: 100;
     transition: all 0.5s;
 }
+:root{
+    --color: red;
+    }
 .header-ac {
     width: 100%;
     height:auto;
@@ -88,7 +91,7 @@
 }
  .menugach {
      display: none;
-     color: red;
+     --color: red;
      fill: var(--color, red);
      font-size: 30px;
      width:50px ; height: 50px;
