--- a/src/AllCss.css
+++ b/src/AllCss.css
@@ -164,14 +164,14 @@
     cursor: pointer;
    
   }
-  .blog-two-sub-1 a {
+  .blog-two-sub-1 AnchorLink {
     text-decoration: none;
     color:var(--red);
     background-color:transparent;
    
    
   }
-  .blog-two-sub-1 a:hover {
+  .blog-two-sub-1 AnchorLink:hover {
     color:black;
   }
   
@@ -197,14 +197,14 @@
    background-color:transparent;
     cursor: pointer;
   }
-  .blog-two-sub-2 a {
+  .blog-two-sub-2 AnchorLink {
     text-decoration: none;
     color:var(--red);
     background-color:transparent;
     
    
   }
-  .blog-two-sub-2 a:hover {
+  .blog-two-sub-2 AnchorLink:hover {
     color:black;
   }
   
@@ -232,7 +232,7 @@
     background-color:transparent;
    
   }
-  .blog-two-sub-3 a {
+  .blog-two-sub-3 AnchorLink {
     text-decoration: none;
     color:var(--red);
     background-color:transparent;
@@ -648,7 +648,7 @@
     font-size: 40px;
     content: '\2022';
   }
-  .feature-one-1 a {
+  .feature-one-1 AnchorLink {
     text-decoration: none;
     padding: 12px 20px;
     background-color: var(--red);
@@ -659,7 +659,7 @@
     top:0;
     transition:all 0.5s;
   }
-  .feature-one-1 a:hover {
+  .feature-one-1 AnchorLink:hover {
     top:-10px;
   }
   .feature-one-2 {
@@ -712,7 +712,7 @@
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: 40px;
   }
-  .feature-two-context a {
+  .feature-two-context AnchorLink {
     background-color: white;
     padding: 10px 14px;
     border-radius: 5px;
@@ -722,7 +722,7 @@
     top:0;
     transition: all 0.5s;
   }
-  .feature-two-context a:hover {
+  .feature-two-context AnchorLink:hover {
     top:-10px;
   }
   .wave img {
@@ -808,7 +808,7 @@
     color:rgba(255, 255, 255, 0.7);
     margin-bottom: 50px;
   }
-  .home-content-1 a {
+  .home-content-1 AnchorLink {
     background-color: var(--red);
     fill: var(--red, var(--red));
     padding: 12px 16px;
@@ -945,14 +945,14 @@
     list-style-type: none;
     
   }
-  .header-menu li a {
+  .header-menu li AnchorLink {
     color: rgba(255, 255, 255, 0.6);
     font-size: 15px;
     text-decoration: none;
     transition: all 0.5s;
     scroll-behavior: smooth;
   }
-  .header-menu li:hover a {
+  .header-menu li:hover AnchorLink {
     color:white;
     scroll-behavior: smooth;
   }
@@ -992,7 +992,7 @@
    padding: 20px 0;
    list-style-type: none;
   }
-  .header-menu-gach a {
+  .header-menu-gach AnchorLink {
    text-decoration: none;
    color: white;
    scroll-behavior: smooth;
@@ -1120,13 +1120,14 @@
   .pricing-two-1 hr {
     width: 70%;
     margin: 30px auto;
+   background-color : var(--red)
   }
   .pricing-two-1 p {
     margin:30px 0;
   }
-  .pricing-two-1 a {
+  .pricing-two-1 AnchorLink {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+    /* fill: var(--red, var(--red)); */
     padding: 10px 14px;
     border-radius: 5px;
     text-decoration: none;
@@ -1173,7 +1174,7 @@
   .pricing-two-2 p {
     margin:30px 0;
   }
-  .pricing-two-2 a {
+  .pricing-two-2 AnchorLink {
     background-color: var(--red);
     padding: 10px 14px;
     border-radius: 5px;
@@ -1222,7 +1223,7 @@
   .pricing-two-3 p {
     margin:30px 0;
   }
-  .pricing-two-3 a {
+  .pricing-two-3 AnchorLink {
     background-color: var(--red);
     padding: 10px 14px;
     border-radius: 5px;
@@ -1235,7 +1236,7 @@
   .pricing-two-3:hover {
     top:-10px;
   }
-  .pricing-two-3 a:hover {
+  .pricing-two-3 AnchorLink:hover {
     top:-10px;
   }
   
@@ -1288,7 +1289,6 @@
     width: 7%;
     height:1px;
     background-color: var(--red);
-    fill: var(--red, var(--red));
     border:1px solid var(--red);
     border-radius:15px
   }
@@ -1402,7 +1402,7 @@
   }
   .service-two-content1:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content1:hover i {
     color: white;
@@ -1412,7 +1412,7 @@
   }
   .service-two-content2:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content2:hover i {
     color: white;
@@ -1422,7 +1422,7 @@
   }
   .service-two-content3:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content3:hover i {
     color: white;
@@ -1432,7 +1432,7 @@
   }
   .service-two-content4:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content4:hover i {
     color: white;
@@ -1442,7 +1442,7 @@
   }
   .service-two-content5:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content5:hover i {
     color: white;
@@ -1452,7 +1452,7 @@
   }
   .service-two-content6:hover span {
     background-color: var(--red);
-    fill: var(--red, var(--red));
+   
   }
   .service-two-content6:hover i {
     color: white;
@@ -1716,7 +1716,7 @@
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: 40px;
   }
-  .team2-five-sub-context a {
+  .team2-five-sub-context AnchorLink {
     background-color: white;
     padding: 10px 14px;
     border-radius: 5px;
@@ -1729,7 +1729,7 @@
   .team2-five-sub-context i {
     font-size: 15px;
   }
-  .team2-five-sub-context a:hover {
+  .team2-five-sub-context AnchorLink:hover {
     top:-10px;
   }
   .wave {
@@ -1989,7 +1989,7 @@
     @media screen and (min-width:1024px) and (max-width:11000px) {
         .blog-one-sub { width: 100%;}
         .blog-one-sub-content {width: 100%; }
-        .blog-two-sub {width: 100%; }
+        .blog-two-sub {width: 70%; }
         .team2-five-sub-context {width: 90%;}
         .wave img {height: 35px; width: 100%}
         .team {width: 90%}
