--- a/src/Components/Pages/Navbar/Nav.css
+++ b/src/Components/Pages/Navbar/Nav.css
@@ -10,9 +10,6 @@
     z-index: 100;
     transition: all 0.5s;
 }
-:root{
-    --color: red;
-    }
 .header-ac {
     width: 100%;
     height:auto;
@@ -26,7 +23,7 @@
     
 }
 .header-sub {
-    width: 70%;
+    width: 60%;
     height:80px;
     display: flex;
     flex-direction: row;
@@ -41,7 +38,7 @@
     align-items: center;
     letter-spacing: 2px;
     color:white;
-    margin-right: 100px;
+    margin-right: 50px;
     cursor: pointer;
     
 }
@@ -57,25 +54,22 @@
 }
 .header-menu li {
     display: inline;
-    padding-right:50px;
+    padding-right:20px;
     list-style-type: none;
     
 }
-.header-menu li a {
+.header-menu li AnchorLink {
     color: rgba(255, 255, 255, 0.6);
     font-size: 15px;
     text-decoration: none;
     transition: all 0.5s;
-    scroll-behavior: smooth;
 }
-.header-menu li:hover a {
+.header-menu li:hover AnchorLink {
     color:white;
-    scroll-behavior: smooth;
 }
 .btn {
     padding:14px 20px;
-    background-color: red;
-    fill: var(--color, red);
+    background-color: var(--red);
     color:white;
     border-radius: 30px;
     border: none;
@@ -91,8 +85,7 @@
 }
  .menugach {
      display: none;
-     --color: red;
-     fill: var(--color, red);
+     color: var(--red);
      font-size: 30px;
      width:50px ; height: 50px;
      position: absolute;
@@ -110,15 +103,13 @@
     padding: 20px 0;
     list-style-type: none;
 }
-.header-menu-gach a {
+.header-menu-gach AnchorLink {
     text-decoration: none;
     color: white;
-    scroll-behavior: smooth;
 }
 .header-menu-gach .btn-gach {
     padding:14px 20px;
-    background-color: red;
-    fill: var(--color, red);
+    background-color: var(--red);
     color:white;
     border-radius: 30px;
     border: none;
